--- a/components/header.html
+++ b/components/header.html
@@ -2,21 +2,20 @@
 <header class="header">
     <div class="container">
         <div class="header-content">
-            <div class="logo">
+            <a href="index.html" class="logo">
                 <img src="assets/movr_logo_clean.jpg" alt="OpenMOVR Logo">
                 <div class="logo-text">
                     <div class="logo-main">OpenMOVR</div>
                     <div class="logo-sub">MDA MOVR Open Source Extension</div>
                 </div>
-            </div>
-            
+            </a>
+
             <nav class="nav">
                 <!-- Navigation will be populated by JavaScript from config.js -->
             </nav>
-            
+
             <div class="header-actions">
-                <a href="https://www.mda.org/science/movr" class="btn btn-outline" target="_blank">Official MDA MOVR ↗</a>
-                <a href="mailto:mdamovr@mdausa.org" class="btn btn-outline">Contact Team</a>
+                <a href="https://www.mda.org/science/movr" class="btn btn-outline" target="_blank">Official MDA MOVR</a>
                 <button class="mobile-menu-toggle">☰</button>
             </div>
         </div>
